--- a/public/style.css
+++ b/public/style.css
@@ -4,12 +4,30 @@
 *{
     font-family: Acme;
 }
+body{
+    overflow-x: hidden;
+}
+hr{
+    margin: 0!important;
+}
+ol{
+    padding: 0; 
+}
+ol li{
+    list-style-type: none;
+  }
 @supports ((-webkit-backdrop-filter:blur(2em)) or (backdrop-filter:blur(2em))) {
     .backdrop-blur {
       transition: 0.5s;
-      background-color: rgba(0, 0, 0, 0.85);
+      background-color: rgba(0, 0, 0, 0.75);
       -webkit-backdrop-filter: blur(20px);
       backdrop-filter: blur(20px)
+    }
+    .backdrop-blur-white{
+        transition: 0.5s;
+        background-color: rgba(255, 255, 255, 0.75);
+        -webkit-backdrop-filter: blur(20px);
+        backdrop-filter: blur(20px)
     }
   }
 .navbar-brand,.nav-link{
@@ -89,6 +107,7 @@ p{
 .containers{
     margin-left: 100px;
     margin-right: 100px;
+    width: 100%;
 }
 .containers h1{
     margin:0 0 60px 0px;
@@ -96,20 +115,22 @@ p{
 #carousel-slick,#carousel-slick2{
     width: 1300px;
 }
-
 .carousel-main{
     height: 800px;
 }
-.slick-list{
-    height: 500px;
+#carousel-slick .slick-list{
+    height: 385px;
+}
+#carousel-slick2 .slick-list{
+    height: 385px;
 }
 .slick-prev {
     left: -50px!important;
-    z-index: 100000!important;
+    z-index: 1000!important;
 }
 .slick-next{
     right:-37px!important;
-    z-index: 100000!important;
+    z-index: 1000!important;
 }
 .slick-prev:before, .slick-next:before {
     font-size: 50px!important;
@@ -126,7 +147,7 @@ p{
     height: 300px;
     margin: 0 30px 30px 0;
     overflow: hidden;
-    
+    box-shadow: -1px 3px 12px 1px rgba(0,0,0,0.75);
 }
 .items img{
     transition: 0.5s;
@@ -141,16 +162,44 @@ p{
 .order{
     margin: 10px 0 0 0;
 }
+.order-abs{
+    position: absolute;
+    bottom:-50%;
+}
+.stat-order button{
+    background-color: rgba(0, 0, 0, 0.7);
+    
+}
 .Buy button{
     background-color: #DADADA;
     color:black
+}
+.Buy2 button{
+    background-color: black;
+    color:white;
+}
+.Boi{
+    width: 300px;
+    overflow: hidden;
+}
+.Coi{
+    transition: 0.5s;
+    width: 50%;
+    margin: 0 5px;
+}
+.Coi:hover{
+    transition: 0.5s;
+    width: 70%;
 }
 .order button{
     transition: 0.5s;
     width: 300px;
     font-size: 18px;
 }
-.order button:hover{
+.items:hover~.order-abs button,.order-abs button:hover{
+    height: 150px;
+} 
+.Buy button:hover{
     transition: 0.5s;
     width: 200px;
 }
@@ -166,3 +215,89 @@ p{
     color:black;
     
 }
+.cart{
+    transition: 1s;
+    position: fixed;
+    top: 25vh;
+    overflow-y: scroll;
+    right: 0;
+    z-index: 10001 ;
+    display: block;
+    width: 440px;
+    border: 1px solid #e9e9e9;
+    border-radius: 8px 0 0 8px;
+    box-shadow: 0 0 12px 4px rgb(0 0 0 / 5%);
+    white-space: nowrap;
+    -ms-transform: translate(379px,0px); /* IE 9 */
+    transform: translate(379px,0px); /* Standard syntax */
+}
+.cart:hover{
+    transition: 1s;
+    -ms-transform: translate(0px,0px); /* IE 9 */
+    transform: translate(0px,0px); /* Standard syntax */
+    bottom:119.5px;
+    
+}
+.cart-header{
+    padding: 11px!important;
+}
+.queue-list,.cart-header{
+    justify-content: space-between!important;
+}
+.queue-list{
+    padding: 0 11px!important;
+}
+.queue-list:hover{
+    background-color: white;
+}
+.cart-header button{
+    background-color: rgb(101, 164, 103);
+    border: none;
+    border-radius: 48px;
+}
+.queue-item button{
+    background-color: black;
+    border: none;
+    border-radius: 48px;
+    color:white;
+    font-size: small;
+}
+
+.queue-item{    
+    padding: 11px 5.5px;
+}
+.queue-item p{
+    color: black;
+    font-size: 10px;
+    font-family: poppins;
+    line-height: 15px;
+    margin-bottom: 0!important;
+}
+.queue-item-dial{
+    width: 40px;
+}
+.queue-img{
+    width: 40px;
+    height: 40px;
+    overflow: hidden;
+    border-radius: 4px;
+}
+.queue-img img{
+    width: auto;
+    height: 100%;
+}
+::-webkit-scrollbar {
+    width: 1.5px;
+    background-color: black
+  
+  }
+  ::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(255, 255, 255, .3);
+    border-radius: 10px
+  }
+  ::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    -webkit-box-shadow: outset 0 0 6px 20px rgba(0, 0, 0, .3);
+    background:rgb(101, 164, 103);
+  
+  }
